# foley-forge

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  ROADMAP.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_starter_sfx.py
src/foley_forge/: __init__.py  cli.py  config.py  ingest.py  models.py  narrative.py  pipeline.py  sampling.py  timecode.py
src/foley_forge/assets/sfx/: README.md  manifest.json
src/foley_forge/audio/: __init__.py  onsets.py
src/foley_forge/backends/: __init__.py  anthropic_backend.py  base.py  mock.py  openai_compat.py  opencv5.py
src/foley_forge/enhance/: __init__.py  beats.py  loudness.py
src/foley_forge/exporters/: __init__.py  base.py  edl.py  fcp7xml.py  fcpxml.py
src/foley_forge/sfx/: __init__.py  freesound.py  library.py  matcher.py  taxonomy.py
tests/: conftest.py  test_audio_and_backend.py  test_edge_cases.py  test_exporters.py  test_pipeline_e2e.py  test_sfx.py  test_timecode.py
